@@ -3,6 +3,7 @@ This file documents the revision history for the SNClient+ agent.
 next:
          - add check_ntp_offset
          - add check_mailq
+         - add check_connections
          - fix using arguments in aliased checks (#69)
 
 0.15     Fri Dec 15 23:31:08 CET 2023
